[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "beautifulsoup4>=4.12.3",
    "fake-useragent>=2.0.3",
    "flask>=3.1.0",
    "nltk>=3.9.1",
    "praw>=7.8.1",
    "requests>=2.32.3",
    "spacy>=3.8.3",
]
